<resources>
    <string name="app_name">To Do List</string>
    <string name="Search">Search</string>
    <string name="search_list">Search List</string>
    <string name="Enter_New_List">Enter New List Name</string>
    <string name="Add_New_List">Add New List</string>
    <string name="This_button_will_be_remove_late">This button will be remove late</string>
    <string name="Item1">Item 1</string>
    <string name="Item2">Item 2</string>
    <string name="Item3">Item 3</string>
    <string name="Item4">Item 4</string>
    <string name="TODO">TODO</string>
    <string name="Groceries">Groceries</string>
    <string name="Hardware">Hardware</string>
    <string name="Home">Home Improvement</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="column_1">Column 1</string>
    <string name="column_2">Column 2</string>
    <string name="column_3">Column 3</string>
    <string name="column_4">Column 4</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_re_enter_password">Re-Enter Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_a_new_account">Create A New Account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">Name</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>