<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/squarebackground">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Groc"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/Groceries" />

            <RadioButton
                android:id="@+id/hardw"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/Hardware" />

            <RadioButton
                android:id="@+id/Homeimprovement"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:text="@string/Home" />

        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/submit" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>