<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_header_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/login_reenter_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/action_re_enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/login_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/login_reenter_password_input"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/action_login"
        app:layout_constraintBottom_toTopOf="@+id/login_create_new_account_button"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login_create_new_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/action_create_a_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>